# cogo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.org  CMakeLists.txt  CONTRIBUTING.txt  Dockerfile  Doxyfile  LICENSE  README.md  README.org  co.c  co.h  co_fs.c  co_fs.h  co_fs_test.cpp  co_intf.h  co_intf_test.cpp  co_st.c  co_st.h  co_st_q.h  co_st_q.inc  co_st_test.c  co_st_test.cpp  co_test.cpp  cogo-config.cmake.in  cogo.h  cogo_co.c  cogo_co.h  cogo_co_test.c  cogo_co_test.cpp  cogo_yield.h  cogo_yield_case.h  cogo_yield_label_value.h  cogo_yield_test.c  cogo_yield_test.cpp  format.sh  (+12 more)
.github/workflows/: test.yaml
cmake/: cogo-config.cmake.in  cogo.pc.in  cogoCPack.cmake  cogoConfig.cmake.in  compile_options.cmake  run_doxygen.cmake  unity.cmake
doc/: comment.txt  glossary.txt
example/: CMakeLists.txt  await_example.c  await_example.cpp  chan_example.c  chan_example.cpp  coroutine_await_example.c  coroutine_await_example.cpp  coroutine_blocking_example.cpp  coroutine_sched_example.c  coroutine_sched_example.cpp  fib_example.c  generator_example.c  generator_example.cpp
example/interface/: multi_impl1.h  multi_intf.h  single_impl.h  subtyping.c
include/cogo/: co_st.h  co_st_q.inc  cogo.h  cogo_async.h  cogo_await.h  cogo_call.h  cogo_co.h  cogo_pt.h  cogo_queue_st_template.h  cogo_queue_template_st.h  cogo_st.h  cogo_st_queue_template.h  cogo_yield.h  cogo_yield_case.h  cogo_yield_label_value.h  macro_utils.h  utils.h
include/cogo/_internal/: cogo_queue_template.h  cogo_yield_case.h  cogo_yield_label_value.h  cogo_yield_labels_as_values.h  cogo_yield_switch.h
include/cogo/_private/: cogo_queue_template.h  cogo_yield.h  cogo_yield_case.h  cogo_yield_label_value.h  macro_utils.h
include/cogo/private/: cogo_pt.h  cogo_pt_case.h  cogo_pt_goto.h  cogo_queue_template.h  cogo_yield.h  cogo_yield_case.h  cogo_yield_goto.h  cogo_yield_labels_as_values.h  cogo_yield_switch.h  macro_utils.h
scripts/: doxygen.sh  format.sh  test.sh
src/: await.h  await.hpp  co.h  co.hpp  co_st.c  cogo.h  cogo_async.c  cogo_async_chan.c  cogo_async_resume.c  cogo_async_sched_st.c  cogo_async_test.c  cogo_await.c  cogo_await_test.c  cogo_call.c  cogo_call_test.c  cogo_co.c  cogo_co_chan.c  cogo_co_st.c  cogo_co_test.c  cogo_pt_test.c  cogo_sched_step.c  cogo_st.c  cogo_st_test.c  cogo_yield.c  cogo_yield_test.c  coroutine_await_example.c  coroutine_await_example.cpp  coroutine_blocking_example.cpp  coroutine_sched_example.cpp  freestanding.h  gen.h  gen.hpp  gen_case.h  gen_case.hpp  gen_label_value.h  gen_label_value.hpp  gen_line_no.h  gen_line_no.hpp  gen_lineno.h  gen_lineno.hpp  (+10 more)
src/avl_tree/: avl_tree.cpp  avl_tree.h  avl_tree_test.cpp  avltree.c  avltree.h  avltree.py  avltree_test.c  avltree_test.py
src/coroutine/: CMakeLists.txt  README.org  _list.h  _m_list.h  await.h  await.hpp  co.h  co.hpp  co_blocking.hpp  co_blocking_example.cpp  co_example.cpp  co_goto.h  co_goto_test.c  co_jmp.h  co_label_value.h  co_label_value_example.c  co_switch_goto.h  co_switch_goto.hpp  co_switch_goto_example.c  co_switch_goto_example.cpp  coroutine.h  coroutine_blocking_example.cpp  coroutine_example.c  coroutine_example.cpp  coroutine_generator_example.cpp  fun.h  fun.hpp  gen_label_value.h  gen_label_value.hpp  gen_switch.h  gen_switch.hpp
src/ipc/: unix.c  unix.h  unix_test.c
test/: CMakeLists.txt  await_case_benchmark.c  await_case_benchmark.cpp  benchmark.c  benchmark.cpp  co_case_benchmark.c  cogo_async_test.c  cogo_call_test.c  cogo_pt_test.c  gen_case_benchmark.c  gen_case_benchmark.cpp  gen_label_value_benchmark.c  gen_label_value_benchmark.cpp  gen_lineno_benchmark.c  gen_lineno_benchmark.cpp  macro_map_test.c  memory_test.c  stack_opt_asm.c  stack_test.c  stdatomic_test.c  test_client_v2.c  test_new.c  test_retype.c  test_server_v2.c  test_sharedmemory_client.c  test_sharedmemory_server.c  test_vl.c  unit_test.c
test/coroutine/: CMakeLists.txt  co_example.c  co_example.cpp  co_gen_n.cpp  co_goto_test.c  co_readme.c  co_readme.cpp  co_switch_goto_example.c  fun_example.c  fun_example.cpp  gen_label_value_example.c  gen_switch_example.c  gen_switch_example.cpp  gen_test.cpp  nat_example.c
tool/: .valgrindrc  build.sh  cscope.sh  debug.sh  dep.sh  format.sh  gtags.sh  index-cscope.sh  index-gtags.sh  install_deps.sh  profile.sh  static_analysis.sh  test.sh
